--- a/parts/4_testing_and_optimization.tex
+++ b/parts/4_testing_and_optimization.tex
@@ -2,19 +2,19 @@
 
 \section{Методика тестирования}
 
-Запуск тестов производилось на компьютере со следующими характеристиками:
+Запуск тестов производил на компьютере со следующими характеристиками:
 \begin{itemize}
-\item Процессор: Intel(R) Core(TM)2 CPU 6400 с частотой 2.13 GHz.
-\item Размер оперативной памяти: 4 гб.
+\item Процессор: Intel Core 2 6400 с частотой 2.13 GHz.
+\item Размер оперативной памяти: 4 Gb.
 \item Операционная система: Ubuntu 12.10 64-bit.
 \end{itemize}
 
-Для запуска JavaScript кода, в том числе сгенерированного компиляторами Kotlin и Dart2js, использовались виртуальные машины V8 и SpiderMonkey 17 (mozjs17). При запуске тестов с использованием SpiderMonkey использовался следующий набор ключей: <<\path$--methodjit$ \path$--typeinfer$>>. Первый параметр включает JIT компиляции методов с помощью JaegerMonkey, второй -- включает сбор информации о типах переменных и дальнейшее использования этой информации для оптимизаций.
+Для запуска JavaScript кода, в том числе сгенерированного компиляторами Kotlin и Dart2js, использовались виртуальные машины V8 версии 3.17 и SpiderMonkey 17 версии (mozjs17). Запуск тестов с использованием V8 никакие ключи не использовались. А при запуске тестов в SpiderMonkey использовался следующий набор ключей: <<\path$--methodjit$ \path$--typeinfer$>>. Первый параметр включает JIT компиляцию методов, второй -- включает сбор информации о типах переменных и дальнейшее использования этой информации для оптимизаций.
 Для запуска тестов на языке Dart использовалась виртуальная машина DartVM. Виртуальная машина языка Dart и компилятор Dart2js были взяты из Dart SDK версии 0.4.2.8.
 
-Каждое измерение состоит из двух основных этапов, каждый длительностью в 2 секунды. В качестве результата берутся только результаты второго запуска, а первый запуск нужен для того что бы дождаться пока виртуальная машина перейдет в стабильное состояние. Так же, на этом этапе осуществляется так называемый <<прогрев>> виртуальной машины. Для <<прогрева>> виртуальной машины на нем запускается код теста. Данная процедура, позволяет виртуальной машине собрать необходимую информацию о коде, чтобы провести оптимизации и выполнять тест максимально быстро на втором этапе.
-В время основного запуска измеряется количество успешных итераций запущенных в течении двух секунд и то сколько реально времени на это было потрачено. 
-В конце каждой итерации выполняется проверка результатов и в случае если они не соответствуют эталонному значению тестирование экстренно завершается. Результатом работы теста является среднее время выполнения одной итерации.
+Каждое измерение состоит из двух основных этапов, каждый длительностью две секунды. Длительность этапов была подобрана так чтобы этого времени хватало на стабилизацию процессов внутри виртуальной машины. Первый запуск нужен для того что бы дождаться пока виртуальная машина перейдет в стабильное состояние. Так же, на этом этапе осуществляется так называемый <<прогрев>> виртуальной машины. Данная процедура, позволяет виртуальной машине собрать необходимую информацию о коде, чтобы провести оптимизации и выполнять тест максимально быстро на втором этапе.
+Во время основного запуска измеряется количество итераций, запущенных в течении двух секунд, и то сколько реально времени на это было потрачено. 
+В конце каждой итерации выполняется проверка результатов и в случае если они не соответствуют эталонному значению тестирование экстренно завершается. Результатом работы теста является среднее время выполнения одной итерации во время основного запуска.
 
 \section{Richards}
 
@@ -27,9 +27,9 @@
 \label{richards_0}
 \end{figure}
 
-Из данной диаграммы видно, что при запуске на виртуальной машине V8 тест, скомпилированный с помощью компилятора Kotlin, уступает тесту, скомпилированному с помощью Dart2js, примерно в 4 раза, а тесту написанном на JavaScripte -- более чем в 5 раз. При запуске на mozjs17 эта разница, при сравнении с тестом написанном JavaScript увеличивается до примерно 15 раз и в случае с Dart2js уменьшается до 2 раза. Безусловным лидером данного и всех остальных тестов является код написанный на Dart и запущенный в DartVM.
+Из данной диаграммы видно, что при запуске на виртуальной машине V8 тест, скомпилированный с помощью компилятора Kotlin, уступает тесту, скомпилированному с помощью Dart2js, примерно в 4 раза, а тесту написанному на JavaScript -- более чем в 5 раз. При запуске на mozjs17 эта разница, при сравнении с тестом написанным на JavaScript увеличивается до примерно 15 раз и в случае с Dart2js уменьшается до 2 раза. Безусловным лидером данного и всех остальных тестов является код написанный на Dart и запущенный в DartVM.
 
-Если открыть код, получившейся в результате компиляции с помощью компилятора Kotlin, не трудно заметить, что все обращения даже внутри пакета осуществляются по полному имени (см. листинг \ref{example_with_package}). Такого рода обращений в получившемся коде очень много и в случае большой вложенности пакетов это может отрицательно сказаться на результаты. 
+Если открыть код, получившейся в результате компиляции с помощью компилятора Kotlin, не трудно заметить, что все обращения даже внутри пакета осуществляются по полному имени (см. листинг \ref{example_with_package}). Такого рода обращений в получившемся коде очень много и в случае большой вложенности пакетов это может отрицательно сказаться на производительности. 
 
 \begin{code}
 \begin{JavaScript}[caption=Пример код с обращением по полному имени внутри того же пакета, label=example_with_package]
@@ -49,7 +49,7 @@ org: Kotlin.definePackage({
 \end{JavaScript}
 \end{code}
 
-Эксперименты подтвердили, что для виртуальной машины V8 это действительно так -- этот же тест, но с меньшей вложенностью пакетов выполняется примерно на 30\% быстрее. А для виртуальной машины mozjs17 такое изменение никакого влияния на производительность не оказало(см. рисунок \ref{richards_i}).
+Экспериментально было подтвержденно, что для виртуальной машины V8 это действительно так -- этот же тест, но с меньшей вложенностью пакетов выполняется примерно на 30\% быстрее. А для виртуальной машины mozjs17 такое изменение никакого влияния на производительность не оказало (см. рисунок \ref{richards_i}).
 
 \begin{figure}[ht!]
 \centering
@@ -71,8 +71,8 @@ org: Kotlin.definePackage({
 
 % К сожалению, из-за структурных сложностей реализовать качественную оптимизацию для этого случая не удалось.
 
-Далее, можно заметить что все обращения к полям классов реализованы через функции обычно называемые <<аксессорами>>. Это объясняется тем, что в языке Kotlin у объектов нет полей, есть только свойства. По-умолчанию свойства имеют простую реализацию <<аксессоров>>, но пользователь может написать свою функцию <<аксессор>>. Для единообразия кода и для <<бинайрной>>\footnote{Под <<бинарной>> совместимостью понимается возможность изменять кода без необходимости перекомпилировать зависящие от него части}
-совместимости компилятор все <<аксессоры>> транслирует в функции, а их доступ к ним -- в вызов соответствующих функций. Пример такого кода на языке Kotlin приведен в листинге \ref{accessor_example_kt}, результат компиляции данного кода приведен в листинге \ref{accessor_example_js}
+Далее, можно заметить что все обращения к полям классов реализованы через функции, обычно называемые <<аксессорами>>\footnote{<<аксессором>> называют функцию предоставляющую доступ к полю объекта для его чтение(<<геттеры>>) или записи в него(<<сеттеры>>)}. Это объясняется тем, что в языке Kotlin у объектов нет полей, есть только свойства. По-умолчанию свойства имеют простую реализацию <<аксессоров>>, но пользователь может написать свою функцию <<аксессор>>. Для единообразия кода и для <<бинарной>>\footnote{Под <<бинарной>> совместимостью понимается возможность изменять код без необходимости перекомпилировать зависящие от него части}
+совместимости компилятор транслирует все <<аксессоры>> в функции, а все обращения к свойствам -- в вызов соответствующих функций. Пример такого кода на языке Kotlin приведен в листинге \ref{accessor_example_kt}, результат компиляции данного кода приведен в листинге \ref{accessor_example_js}
 
 \begin{code}
 \begin{Kotlin}[caption=Пример использования <<аксессоров>> в языке Kotlin, label=accessor_example_kt]
@@ -90,8 +90,8 @@ class User(val name: String, var password: String) {
 \end{Kotlin}
 \end{code}
 
-Конечно же, современные виртуальные машины умеют подобного рода код встраивать в место вызова. Эксперименты подтвердили что многие <<аксессоры>> действительно встраиваются, но не все, например это может случиться если виртуальная машина посчитает, что данная функция не достаточно часто вызывается чтобы его встраивать или если  метод вызывается из многих мест компилятор может решить что встраивать в места всех вызовов слишком дорого. 
-Полное встраивание <<акссесоров>> не осуществил и статический компилятор Closure-compiler. На рисунке \ref{richards_i} можно видеть как Closure-compiler повлиял на результат.
+Конечно же, современные виртуальные машины умеют встраивать подобного рода код в место вызова. Эксперименты подтвердили что многие <<аксессоры>> действительно встраиваются, но не все, например это может случиться если виртуальная машина посчитает, что данная функция недостаточно часто вызывается чтобы её встраивать или если метод вызывается из многих мест, компилятор может решить, что встраивать в места всех вызовов слишком дорого. 
+Полное встраивание <<аксессоров>> не осуществил и статический компилятор Closure-compiler, который был встроен в компилятор Kotlin. Такое встраивание позволило использовать опции недоступные в обычном режиме. Также такое решение позволило избавиться от накладных расходов, ввиде генерации и последующего разбора промежуточного исходного кода. Вместо этого в качестве входного параметра в Closure-compaler передавалось синтаксическое дерево. На рисунке \ref{richards_i} можно видеть как Closure-compiler повлиял на результат.
 Далее был проведен эксперимент с полным встраиванием кода, что дало существенный выигрыш. Таким образом, при помощи несложных модификаций удалось получить почти четырехкратное ускорение. 
 
 \begin{code}
@@ -127,11 +127,11 @@ class User(val name: String, var password: String) {
 \end{JavaScript}
 \end{code}
 
-Таким образом, было решено реализовать данную оптимизацию, но наряду с увеличением производительности хотелось сохранить имеющиеся плюсы имеющейся версии, а именно <<бинарную>> совместимость и читабельность кода. Было проведено исследование возможности использования в данной оптимизации свойства из стандарта ECMAScript версии 5\cite{ES5}. Был написан небольшой тест для проверки следующих случаев (см. листинг \ref{prop_test}):
+Таким образом, было решено реализовать данную оптимизацию, но наряду с увеличением производительности хотелось попрежнему обеспечивать <<бинарную>> совместимость. Было проведено исследование возможности использования в данной оптимизации свойства из стандарта ECMAScript версии 5 (ES5) \cite{ES5}. Был написан небольшой тест для проверки следующих случаев (см. листинг \ref{prop_test}):
 \begin{itemize}
-	\item создания объектов с полем с помощью object литерала
-	\item создания объектов с последующим добавлением поля
-	\item создания объектов с последующим добавлением свойства
+	\item создания объектов с полем с помощью object литерала;
+	\item создания объектов с последующим добавлением поля;
+	\item создания объектов с последующим добавлением свойства.
 \end{itemize}
 
 \begin{code}
@@ -152,14 +152,16 @@ function add_property() {
 \end{JavaScript}
 \end{code}
 
-Первый тест, результаты которого приведены на рисунке \ref{prop_constructing_test}, показал, что современные виртуальные машины хуже оптимизируют создание объектов с добавлением в них свойств по сравнение с созданием объектов с полями. Следующий тест, проверяющий скорость доступа к полям и свойствам (см. рисунок \ref{prop_access_test}), так же оказался не в пользу свойств -- современные виртуальные машины хуже оптимизируют доступ к свойствам.
-
 \begin{figure}[ht!]
 \centering
 \includegraphics[width=0.75\textwidth]{images/prop_constructing_test.png}
 \caption{Результаты тестирования скорости создания объектов с полями и свойствами}
 \label{prop_constructing_test}
 \end{figure}
+
+Первый тест, результаты которого приведены на рисунке \ref{prop_constructing_test}, показал, что современные виртуальные машины хуже оптимизируют создание объектов с добавлением в них свойств, по сравнению с созданием объектов с полями.
+
+Следующий тест, проверяющий скорость доступа к полям и свойствам (см. рисунок \ref{prop_access_test}), так же оказался не в пользу свойств -- современные виртуальные машины хуже оптимизируют доступ к свойствам.
 
 \begin{figure}[ht!]
 \centering
@@ -168,7 +170,7 @@ function add_property() {
 \label{prop_access_test}
 \end{figure}
 
-Компромиссом в данной ситуации стало решение использовать свойства ES5 только в случаях когда пользователь задает свои <<аксессоры>>. В остальных случаях было решено использовать обычные поля объектов. Такое решение позволяет сочетать максимальную скорость и <<бинарную>> совместимость. Кроме того, данная оптимизация улучшило читаемость и уменьшило объем кода получаемого после компиляции. В листинге \ref{accessor_example_opt_js} приведен результат компиляции после оптимизации.
+Компромиссом в данной ситуации стало решение использовать свойства ES5 только в случаях, когда пользователь задает свои <<аксессоры>>, в остальных случаях было решено использовать обычные поля объектов. Такое решение позволяет сочетать максимальную скорость и <<бинарную>> совместимость. Кроме того, данная оптимизация улучшила читаемость и уменьшила объем кода, получаемого после компиляции. В листинге \ref{accessor_example_opt_js} приведен результат компиляции после оптимизации.
 
 \begin{code}
 \begin{JavaScript}[caption=Результат компиляции примера использования <<аксессоров>> в языке Kotlin (листинг \ref{accessor_example_kt}) после оптимизации, label=accessor_example_opt_js]
@@ -200,8 +202,8 @@ function add_property() {
 \begin{itemize}
 \item Необходимо упростить обращения внутри пакета.
 \item Необходимо сделать аналог импортов, предоставив тем самым возможность кратко обращаться к объектам и их полям из других пакетов.
-\item Поля и свойства классов и объектов нужно инициализировать в конструкторе и одном порядке.
-\item Необходимо упростить структуру генерируемого кода.
+% \item Поля и свойства классов и объектов нужно инициализировать в конструкторе и одном порядке.
+% \item Необходимо упростить структуру генерируемого кода.
 \end{itemize}
 
 Реализованная оптимизация доступа к свойствам позволила значительно улучшить результаты кода скомпилированного с помощью компилятора Kotlin. Итоговый результат приведен на рисунке \ref{richards_f}
@@ -215,7 +217,7 @@ function add_property() {
 
 \section{DeltaBlue}
 
-Результаты, полученные на начальном этапе, когда еще не были сделаны никакие оптимизации, на тест DeltaBlue представленны на рисунке \ref{deltablue_0}.
+Результаты, полученные на начальном этапе, когда еще не были сделаны никакие оптимизации, на тест DeltaBlue представленны на рисунке~\ref{deltablue_0}.
 
 \begin{figure}[ht!]
 \centering
@@ -224,7 +226,7 @@ function add_property() {
 \label{deltablue_0}
 \end{figure}
 
-При запуске на виртуaльной машине V8 тест скомпилированный с помощью компилятора Kotlin уступает ближайшему сопернику -- тесту скомпилированному с помощью Dart2js на 2 порядка. При запуске на mozjs17 на порядок медленнее чем ближайший конкурент Dart2js.
+При запуске на виртуaльной машине V8 тест, скомпилированный с помощью компилятора Kotlin, уступает ближайшему сопернику -- тесту скомпилированному с помощью Dart2js на 2 порядка. При запуске на mozjs17 -- на порядок.
 
 \begin{figure}[ht!]
 \centering
@@ -244,8 +246,8 @@ function add_property() {
 \label{deltablue_i}
 \end{figure}
 
-На рисунке \ref{deltablue_i} можно видеть результат проведенных экспериментов. В первую очередь была применена оптимизация сделанная для теста Richards -- это дало ускорение в среднем на 30\%, но все равно разница с конкурентами все ещё достаточно большая, поэтому эксперименты были продолжены. Ощутимое ускорение удалось получить в следствии замены везде ArrayList на LinkedList.
-Как видно из диаграмм небольшой выигрыш так же можно получить заменив все контейнеры на массивы. 
+На рисунке \ref{deltablue_i} можно видеть результат проведенных экспериментов. В первую очередь была применена оптимизация сделанная для теста Richards -- это дало ускорение в среднем на 30\%, но все равно разница с конкурентами все ещё достаточно большая, поэтому эксперименты были продолжены. Ощутимое ускорение удалось получить в следствии замены используемого контейнера -- ArrayList на LinkedList.
+Как видно из диаграмм, небольшой выигрыш так же можно получить заменив все контейнеры на массивы. 
 
 \begin{figure}[ht!]
 \centering
@@ -256,7 +258,7 @@ function add_property() {
 
 На рисунке \ref{deltablue_0_prifile} приведены результаты профилирования теста DeltaBlue. Как видно, много времени тратится на конструирование объектов, причем существенную долю этого времени занимает работа инфраструктурного кода. Как можно видеть на рисунке \ref{deltablue_i}, экспериментально удалось подтвердить, что ускорить конструирование объектов в рамках существующей структуры возможно.
 
-\newpage
+% \newpage
 Приведем простой пример демонстрирующий данную проблему (листинги \ref{constructor_problem_kt} и \ref{constructor_problem_js}):
 
 \begin{code}
@@ -268,7 +270,7 @@ class B(name: String) : A(name)
 \end{code}
 
 \begin{code}
-\begin{JavaScript}[caption=Результат компиляции пример с наследованием, label=constructor_problem_js]
+\begin{JavaScript}[caption=Результат компиляции примера с наследованием, label=constructor_problem_js]
 (function () {
   'use strict';
   var classes = function () {
@@ -292,8 +294,8 @@ class B(name: String) : A(name)
 \end{JavaScript}
 \end{code}
 
-\newpage
-Первая проблема заключается в том, что при создании <<класса>> вызов функции инициализатора \path{initialize} оборачивается в библиотечную функцию \path{klass} (см. листин \ref{klass_js}), вызов которого мы и наблюдаем в профилировщике. Что создает дополнительные расходы при создании объектов -- ввиде дополнительного вызова функции. Данную проблему можно решить избавившись от функции <<обертки>> и использованием созданием пустого инициализатора в случае отсутствия своего инициализатора у создаваемого класса.
+% \newpage
+Первая проблема заключается в том, что при создании <<класса>> вызов функции инициализатора \path{initialize} оборачивается в библиотечную функцию \path{klass} (см. листинг \ref{klass_js}), вызов которой мы и наблюдаем в профилировщике, что создает дополнительные расходы при создании объектов -- в виде еще одного вызова функции. Данную проблему можно решить, избавившись от функции обертки и использованием пустого инициализатора в случае отсутствия своего инициализатора у создаваемого класса.
 
 \begin{code}
 \begin{JavaScript}[caption=Функция klass из стандартной библиотеки, label=klass_js]
@@ -306,7 +308,7 @@ function klass() {
 \end{JavaScript}
 \end{code}
 
-Следующая проблема связана с вызовом конструктора наследуемого класса, который реализуется ввиде вызова функции \path{super_init}, код которого приведен в листинге \ref{super_init_js}. Что опять создает накладные расходы при создании экземпляров класса с предком отличным от \path{Any}.
+Следующая проблема связана с вызовом конструктора наследуемого класса, который реализуется в виде вызова функции \path{super_init}, код которой приведен в листинге \ref{super_init_js}. Что вновь создает накладные расходы при создании экземпляров класса с предком отличным от \path{Any}.
 
 \begin{code}
 \begin{JavaScript}[caption=Функция super\_init из стандартной библиотеки, label=super_init_js]
@@ -317,10 +319,10 @@ function super_init () {
 \end{JavaScript}
 \end{code}
 
-Для решения данной проблемы было решено заменить генерацию, в теле инициализатора, вызова функции \path{super_init} на <<прямой>> вызов конструктора супер класса. Для приведенного ранее примера (листинг \ref{constructor_problem_kt}) такой код будет выглядеть следующим образом:
+Для решения данной проблемы было решено заменить генерацию, в теле инициализатора, вызова функции \path{super_init} на <<прямой>> вызов конструктора суперкласса. Для приведенного ранее примера (листинг \ref{constructor_problem_kt}) такой код будет выглядеть следующим образом:
 
 \begin{code}
-\begin{JavaScript}[caption=\relax, label=constructor_problem_js]
+\begin{JavaScript}[caption=Результат компиляции примера с наследованием(листинг \ref{constructor_problem_kt}) с прямым вызовом конструктора суперкласса, label=constructor_problem_js_fixed]
 (function () {
   'use strict';
   var classes = function () {
@@ -344,15 +346,15 @@ function super_init () {
 \end{JavaScript}
 \end{code}
 
-Так же, была оптимизирована реализация функции \path{Kotlin.equals}, которая используется для сравнения объектов и судя по результату профилировки тоже вызывается достаточно часто. Так же было оптимизировано сравнение примитивных типов, которая так же осуществлялась через вызов функции \path{Kotlin.equals}, в то время как было бы достаточно и оптимальнее использовать оператор \path{===}.
+Также была оптимизирована реализация функции \path{Kotlin.equals}, которая используется для сравнения объектов и, судя по результату профилировки, тоже вызывается достаточно часто. И было оптимизировано сравнение примитивных типов, которое осуществлялось через вызов функции \path{Kotlin.equals}, в то время как было бы достаточно и оптимальнее использовать оператор \path{===}.
 
-Реализованные оптимизации позволили значительно улучшить результаты кода скомпилированного с помощью компилятора Kotlin. На рисунке \ref{deltablue_f} можно видеть что  итоговые результаты очень близки к результатам компилятора Dart2js.
+Реализованные оптимизации позволили значительно улучшить результаты кода, скомпилированного с помощью компилятора Kotlin. На рисунке \ref{deltablue_f} можно видеть, что итоговые результаты очень близки к результатам компилятора Dart2js.
 
 
 Кроме того, в результате исследования кода, полученного после компиляции теста DeltaBlue, были сделаны следующие выводы:
 \begin{itemize}
 \item Необходимо пересмотреть реализации контейнеров в стандартной библиотеке.
-\item Необходимо, когда это возможно, на этапе компиляции заменять используемые контейнеры на родные для JavaScript аналоги.
+\item Необходимо, когда это возможно, на этапе компиляции заменять используемые контейнеры на <<родные>> для JavaScript аналоги.
 \item Не использовать \path{Kotlin.equals} для проверки ссылочной эквивалентности объектов.
 \end{itemize}
 
@@ -363,10 +365,10 @@ function super_init () {
 \label{deltablue_f}
 \end{figure}
 
-\newpage
+% \newpage
 \section{Havlak}
 
-Результаты, полученные на начальном этапе, когда еще не были сделаны никакие оптимизации, на тест Havlak представленны на рисунке \ref{havlak_0}.
+Результаты, полученные на начальном этапе, без использования оптимизаций, на тест Havlak представленны на рисунке \ref{havlak_0}.
 
 \begin{figure}[ht!]
 \centering
@@ -375,7 +377,7 @@ function super_init () {
 \label{havlak_0}
 \end{figure}
 
-На диаграмме видно, что снова быстрее всех код написанный на Dart и выполняющийся в DartVM. Следом идет, как ни странно, результат скомпилированный с помощью Dart2js. Это объясняется тем что в реализации на JavaScript очень часто используемый кусок был сделан не очень оптимально, а именно то, что в качестве ключа ассоциативного массива используется объект(см. листинг \ref{example_BaseBlock}).
+На диаграмме видно, что снова быстрее всех код написанный на Dart и выполняющийся в DartVM. Следом идет, как ни странно, результат скомпилированный с помощью Dart2js. Это объясняется тем что в реализации на JavaScript \cite{HavlakBench:src} часто используемый фрагмент был реализован не очень оптимально, а именно то, что в качестве ключа ассоциативного массива используется объект(см. листинг \ref{example_BaseBlock}).
 
 \begin{code}
 \begin{JavaScript}[caption=Пример неоптимального использования ассоциативного массива на JavaScript, label=example_BaseBlock]
@@ -398,7 +400,7 @@ function DFS(currentNode, nodes, number, last, current) {
 \end{JavaScript}
 \end{code}
 
-Данное решение не оптимально потому, что при каждом доступ к такому массиву виртуальная машина вызывает у объекта метод toString, а в этом методе каждый раз осуществляется конкатенация двух строк, одна из которых получается преобразованием числа из поля \path{name} в строку. Эксперименты показали, что если для доступа к объектам ассоциативного массива использовать не объект а например поле \path{name}, как в листинге \ref{example_BaseBlock_fixed}, то тест будет выполнятся в два раза быстрее.
+Данное решение неоптимально, потому что при каждом обращение к такому массиву виртуальная машина вызывает у объекта метод toString, а в этом методе каждый раз осуществляется конкатенация двух строк, одна из которых получается преобразованием числа из поля \path{name} в строку. Эксперименты показали, что если для доступа к объектам ассоциативного массива использовать не объект а, например, поле \path{name}, как в листинге \ref{example_BaseBlock_fixed}, то тест будет выполнятся в два раза быстрее.
 
 \begin{code}
 \begin{JavaScript}[caption=Пример улучшения использования ассоциативного массива в тесте на JavaScript, label=example_BaseBlock_fixed]
@@ -418,8 +420,7 @@ function DFS(currentNode, nodes, number, last, current) {
 \label{havlak_0_profile}
 \end{figure}
 
-
-На рисунке \ref{havlak_0_profile} представлены результаты профилирования кода полученного компилятором Kotlin. Наибольший интерес для нас представляют функции из стандартной библиотеке, это связанно с тем, что нашей главной целью является увеличить общую производительность, а не просто увеличить скорость выполнения конкретно взятого кода или теста. В результате изучения кода были отобраны функции которые нуждаются в оптимизации. На рисунке такие функции помечены точкой в начале строки. В отношении остальных функций было решено что они достаточно оптимальны.
+На рисунке \ref{havlak_0_profile} представлены результаты профилирования кода, полученного компилятором Kotlin. Наибольший интерес для нас представляют функции из стандартной библиотеки. Это связанно с тем, что нашей главной целью является увеличение общей производительности, а не просто увеличение скорости выполнения конкретного теста. В результате изучения кода были отобраны функции, которые нуждаются в оптимизации. На рисунке, такие функции помечены точкой в начале строки. В отношении остальных функций было решено, что они достаточно оптимальны.
 
 Как видно, больше всего времени программа проводит в коде конструктора -- функция \path{klass}, что еще раз свидетельствует о необходимости оптимизировать процесс конструирования объектов. Результаты применения этой оптимизации можно видеть на рисунке \ref{havlak_i}.
 
@@ -441,12 +442,12 @@ function DFS(currentNode, nodes, number, last, current) {
 \label{havlak_i}
 \end{figure}
 
-Следующая интересная для нас функция это \path{Kotlin.\$new}. Данная функция использовалась для старой реализации наследования, но в текущей реализации она уже не нужна. Поэтому данная функция была удалена, в результат чего был получен большой прирост скорости, который можно наблюдать на рисунке \ref{havlak_i}.
+Следующая интересная для нас функция это \path{Kotlin.$new}. Данная функция использовалась для старой реализации наследования, но в текущей реализации она уже не нужна. Поэтому данная функция была удалена, в результате чего был получен большой прирост скорости, который можно наблюдать на рисунке \ref{havlak_i}.
 
 В тесте Havlak очень активно используются ассоциативные массивы и от качества их реализации во многом зависит итоговый результат.
 На рисунке с результатом профилирования (\ref{havlak_0_profile}) это можно наблюдать ввиде вызовов функций \path{hashObject} и \path{getBucketForHash}.
 
-Функция \path{hashObject} используется в базовом классе для ассоциативных контейнеров \path{Hashtable} для получения хеша объекта. Оригинальная версия данной функции представлена в листинге \ref{hashObject_original}
+Функция \path{hashObject} используется в базовом классе для ассоциативных контейнеров \path{Hashtable} для получения хеша объекта. Оригинальная версия данной функции представлена в листинге \ref{hashObject_original}.
 
 \begin{code}
 \begin{JavaScript}[caption=Оригинальная версия функции hashObject, label=hashObject_original]
@@ -477,20 +478,20 @@ function hashObject(obj) {
 \end{JavaScript}
 \end{code}
 
-В JavaScript при реализации ассоциативных массивов обычно пользуется тем что во время выполнения объектам языка (Object) можно добавлять и удалять свойства. Для работы с такими свойствами используется их строковое представление.\cite{EffJS} Зная это можно понять почему функция \path{hashObject} возвращает строку.
+В JavaScript при реализации ассоциативных массивов обычно пользуется тем, что во время выполнения объектам языка (Object) можно добавлять и удалять свойства. Для работы с такими свойствами используется их строковое представление~\cite{EffJS}. Зная это, можно понять почему функция \path{hashObject} возвращает строку.
 
 Данная реализация имеет два основных недостатка:
 \begin{enumerate}
-\item данной реализации нет отдельной обработки чисел, в результате чего каждое обращение к число как объекту, во время наличия функций 	\path{hashObject} и \path{toString}, приводит к преобразованию его преобразованию в \path{Object}. Далее это чесло преобразуется в число не смотря на то что такое преобразование будет осуществлен при обращении к свойству.
-Кроме того такое преобразование чисел в строку может лишить виртуальную машину возможности оптимизировать обращения к индексированным свойствам объекта.
+\item Нет отдельной обработки чисел, в результате чего каждое обращение к числу как объекту, во время проверки наличия у него методов	\path{hashCode} и \path{toString}, приводит к его преобразованию в \path{Object}. Далее это число преобразуется в строку, не смотря на то, что такое преобразование будет осуществлено при обращении к свойству.
+Кроме того, такое преобразование чисел в строку может лишить виртуальную машину возможности оптимизировать обращения к индексированным свойствам объекта.
 
-\item Для объектов которые явно не реализуют функцию \path{toString}, в соответствии со стандартом \cite{ES5}, мы всегда будем получать один и тот же результат -- <<[object Object]>>. Что приведет к тому, что все такие объекты будут попадать в одну группу.
+\item Для объектов, которые явно не реализуют функцию \path{toString}, в соответствии со стандартом \cite{ES5}, мы всегда будем получать один и тот же результат -- <<[object Object]>>. Что приведет к тому, что все такие объекты будут попадать в одну группу.
 \end{enumerate}
 
-Для исправления первого недостатка была добавлена соответствующая логика которая возвращает входного аргумент, без преобразований, если он имеет числовой тип (\path{number}).
+Для исправления первого недостатка была добавлена соответствующая логика, которая возвращает входной аргумент, без преобразований, если он имеет числовой тип (\path{number}).
 
-Для исправления второго недостатка была изменена логика работы функции в случае отсутствия у объекта реализации функции \path{hashCode}. В предлагаемой реализации выполняется в случае наличие специального поля \path{\$hashCode} возвращается значение данного поля. Иначе, с помощью функции \path{nextHashCode} получается новый хеш-код который сохраняется в специальное \path{\$hashCode}, для последующего использования, и возвращается как результат функции.
-Функция \path{nextHashCode} имеет простую реализацию и может быть легко изменен. Кончено же, в идеале, такая функция должна возвращать случайное значение, но эксперименты показали, что реализация такой функции, в плане производительности, обходится слишком дорого, даже при использовании стандартных функций \path{Number.random()} и \path{Date.now()}. Поэтому было решено оставить данную реализацию как самую быструю и простую.
+Для исправления второго недостатка была изменена логика работы функции для случая отсутствия у объекта реализации функции \path{hashCode}. В предлагаемой реализации в случае наличия специального поля \path{$hashCode} возвращается значение данного поля. Иначе, с помощью функции \path{nextHashCode} получается новый хеш-код, который сохраняется в специальное поле \path{$hashCode}, для последующего использования, и возвращается как результат функции.
+Функция \path{nextHashCode} имеет простую реализацию и может быть легко изменена. Кончено же, в идеале, такая функция должна возвращать случайное значение, но эксперименты показали, что реализация такой функции, в плане производительности, обходится слишком дорого, даже при использовании стандартных функций \path{Number.random()} и \path{Date.now()}. Поэтому было решено оставить данную реализацию как самую быструю и простую.
 Получившиеся результат приведен в листинге \ref{hashObject_new}.
 
 \begin{code}
@@ -526,19 +527,19 @@ function hashObject(obj) {
 \end{JavaScript}
 \end{code}
 
-В случае если в качестве ключа используется примитивный тип или закрытый класс в котором не определена своя реализация функции \path{hashCode} можно использовать более простую и быструю реализацию ассоциативного контейнера -- \path{PrimitiveHashMap}.
-Для примитивных типов решение об использовании \path{PrimitiveHashMap} можно принимать на этапе компиляции. Для классов же такое решение не подходит, т.к. в определенных ситуациях это может нарушить <<бинарную>> совместимость. Поэтому было решено осуществлять выбор нужно контейнера во время выполнения. К сожалению, текущая структура классов, времени выполнения, не предоставляет информацию о закрытости типа из-за чего невозможно выполнить данную оптимизацию в полной мере.
+В случае если в качестве ключа используется примитивный тип или закрытый класс, в котором не определена своя реализация функции \path{hashCode}, можно использовать более простую и быструю реализацию ассоциативного контейнера -- \path{PrimitiveHashMap}.
+Для примитивных типов решение об использовании \path{PrimitiveHashMap} можно принимать на этапе компиляции. Для классов же такое решение не подходит, т.к. в определенных ситуациях это может нарушить <<бинарную>> совместимость. Поэтому было решено осуществлять выбор нужно контейнера во время выполнения. К сожалению, текущая структура классов (времени выполнения) не предоставляет информацию о закрытости типа из-за чего невозможно выполнить данную оптимизацию в полной мере.
 
 %Можно сделать SmartHashMap
 
-\null
-\begin{LARGE}
-\begin{center}
-\textbf{Результаты}
-\end{center}
-\end{LARGE}
+% \null
+% \begin{LARGE}
+% \begin{center}
+% \textbf{Результаты}
+% \end{center}
+% \end{LARGE}
 
-В результате проведенных оптимизаций удалось значительно улучшить результаты кода скомпилированного с помощью компилятора Kotlin. Итоговый результат приведен на рисунке \ref{havlak_f}
+В результате проведенных оптимизаций удалось значительно улучшить результаты кода скомпилированного с помощью компилятора Kotlin. Итоговый результат приведен на рисунке \ref{havlak_f}.
 
 \begin{figure}[ht!]
 \centering
